build/log/idf_py_stderr_output_14874
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:18:7: error: expected ';' before 'enum'
   18 | typdef enum { IDLE, START, RUN, STOP, ERROR } State_Test;
      |       ^~~~~
      |       ;
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:19:1: error: unknown type name 'State_Test'
   19 | State_Test para_cmd(char *cmd) {
      | ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
